numerous scheduler improvements

--- a/app/app.less
+++ b/app/app.less
@@ -492,5 +492,9 @@ md-toast {
 }
 
 .error-text {
-    color: #F44336;
+    color: #F44336 !important;
+}
+
+.maintenance-text {
+    color: #5e35b1;
 }
