--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -49,7 +49,7 @@
     position: relative;
     padding: 0;
     overflow: auto !important;
-    background: white;
+//    background: white;
 
     input {
         width: 100%;
