reworking alarms display to work better and to work with some katportal changes

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -9,7 +9,7 @@
 
 .alarms-notify-list {
     position: fixed;
-//    top: 57px;
+    top: 57px;
     right: 2px;
     float: right;
     width: 500px;
@@ -241,11 +241,10 @@ ul {
 .alarms-list {
     overflow: auto;
 
-
     .alarms-list-item-content {
         padding: 6px;
+        cursor: pointer;
     }
-
 
 
     .alarm-list-item-badge-warn {
@@ -291,7 +290,7 @@ ul {
     }
 
     .selected-alarm-list-item {
-        background-color: #e1f5fe;
+        background-color: #B3E5FC;
     }
 
     .alarms-list-item-icon {
@@ -304,8 +303,6 @@ ul {
             font-size: 28px;
         }
     }
-
-
 }
 
 .alarms-tools-checkbox {
@@ -336,6 +333,6 @@ ul {
 }
 
 .large-alarms-animate {
-    -webkit-transition: 0.2s linear width, 0.2s linear height;
-    transition: 0.2s linear width, 0.2s linear height;
+    -webkit-transition: 0.1s linear width, 0.1s linear height;
+    transition: 0.1s linear width, 0.1s linear height;
 }
