first commit for receptor status displays

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -34,7 +34,7 @@ rect.parent,
 }
 
 .no-children rect.parent {
-  fill: #259b24;
+  fill: #388E3C;
   fill-opacity: .75;
 }
 
@@ -44,12 +44,12 @@ rect.parent,
 }
 
 .children rect.parent {
-  fill: #259b24;
+  fill: #388E3C;
   fill-opacity: .9;
 }
 
 .children:hover rect.child {
-  fill: #259b24;
+  fill: #388E3C;
 }
 
 .treemap-tooltip {
@@ -70,13 +70,13 @@ text.parent {
 }
 
 circle {
-  fill: #259b24;
+  fill: #388E3C;
 //  stroke: #eee;
   pointer-events: all;
 }
 
 circle.parent {
-  fill: #259b24;
+  fill: #388E3C;
   fill-opacity: .5;
   stroke: transparent;
 }
@@ -92,13 +92,13 @@ circle.child {
 
 rect.part {
   stroke: #eee;
-  fill: #aaa;
+//  fill: #aaa;
   fill-opacity: .8;
 }
 
 rect.part-parent {
   cursor: pointer;
-  fill: #259b24;
+  fill: #388E3C;
   opacity: .9;
 }
 
