--- a/app/health/health.less
+++ b/app/health/health.less
@@ -1,5 +1,71 @@
 .health-map-style-select {
   width: 100px;
-  margin-top: -13px;
+//  margin-top: -13px;
 }
 
+.treemap-container {
+    margin: 20px;
+}
+
+
+.unknown-child {
+    rect {
+        fill: #9E9E9E;
+    }
+    text {
+        fill: black;
+    }
+}
+.nominal-child {
+    rect {
+        fill: #4CAF50;
+    }
+    text {
+        fill: white;
+    }
+}
+.warn-child {
+    rect {
+        fill: #FFC107;
+    }
+
+    text {
+        fill: black;
+    }
+}
+.error-child {
+    rect {
+        fill: #F44336;
+    }
+
+    text {
+        fill: white;
+    }
+}
+.failure-child {
+    rect {
+        fill: #795548;
+    }
+
+    text {
+        fill: white;
+    }
+}
+.unreachable-child {
+    rect {
+        fill: #E91E63;
+    }
+
+    text {
+        fill: white;
+    }
+}
+.inactive-child {
+    rect {
+        fill: white;
+    }
+
+    text {
+        fill: black;
+    }
+}
