added example gantt chart for observations schedules, updated receptor status disaply to work with python identifiers, fixed deactivating users in admin display

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -48,6 +48,10 @@ rect.parent,
 //    fill: #388E3C;
 //}
 
+.child {
+    font-size: 12px;
+}
+
 .treemap-tooltip {
     position: absolute;
     border: 1px solid;
@@ -76,7 +80,7 @@ circle {
 circle.parent {
 //    fill: #388E3C;
     //    fill: #388E3C;
-    fill-opacity: .3;
+    fill-opacity: .8;
     //    stroke: transparent;
 }
 
@@ -86,6 +90,7 @@ circle.parent:hover {
 }
 
 circle.child {
+    font-size: 12px;
     pointer-events: none;
 }
 
