--- a/app/health/health.less
+++ b/app/health/health.less
@@ -163,3 +163,15 @@
 .health-chart {
     margin: 6px;
 }
+
+.status-top-label {
+    background: grey;
+    padding-top: 2px;
+    padding-left: 5px;
+    margin-bottom: 2px;
+}
+
+.status-top-label-text {
+    color: white;
+    font-size: 22px;
+}
