added alarms data service, added longitude from server conf, some refactor work

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -134,7 +134,7 @@
 .legend-popup {
     border-radius: 1px;
     width: 150px;
-    height: 210px;
+//    height: 210px;
     position: fixed;
     right: 18px;
     bottom: 18px;
