fixes for minifying and uglifying in the grunt build task

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -338,7 +338,7 @@
 }
 
 .scheduler-nav-home-item {
-    margin: 32px;
+    margin: 32px !important;
     cursor: pointer;
     height: 320px;
     min-width: 320px;
