set the health status labels to the current theme's colour, that we get from the main toolbar, removed some logging

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -165,7 +165,7 @@
 }
 
 .status-top-label {
-    background: grey;
+//    background: grey;
     padding-top: 2px;
     padding-left: 5px;
     margin-bottom: 2px;
