fixed styling for some md-selects, changed mode button in scheduler detail to a select

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -461,6 +461,7 @@
     min-width: 1000px;
     margin-bottom: 16px;
     min-height: 290px;
+    max-height: 290px;
 }
 
 .svg-subarray, .svg-receptor, {
