moved dashboard buttons to the right

--- a/app/app.less
+++ b/app/app.less
@@ -236,6 +236,7 @@ md-sidenav {
     border: 0;
     position: absolute;
     z-index: 3;
+    width: 95%;
     span {
         margin-left: 32px;
 
