added regex search filter for all search boxes, removed some unused functions and styling

--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -1,69 +1,61 @@
 .user-list {
-    padding: 0;
-    min-width: 800px;
-    height: 100%;
-    margin-bottom: 16px;
-    overflow: auto;
+  padding: 0;
+  min-width: 800px;
+  height: 100%;
+  margin-bottom: 16px;
+  overflow: auto;
 
-    .user-row {
-        padding-left: 8px;
-        padding-right: 8px;
-        border-bottom: 1px solid #d3d3d3;
-        height: 49px;
 
-        &:hover {
-            background: #f8f8f8;
-        }
+  .user-row {
+    padding-left: 8px;
+    padding-right: 8px;
+    border-bottom: 1px solid #d3d3d3;
+    height: 49px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    &:hover {
+      background: #f8f8f8;
     }
 
-    .user-cell {
-        min-width: 200px;
-        max-width: 400px;
-        width: 400px;
-        overflow: visible;
-        text-overflow: ellipsis;
 
-        input {
-            border-top: 0;
-            border-left: 0;
-            border-right: 0;
-            margin-right: 24px;
-            background: transparent;
-            border-bottom: 1px solid #d3d3d3;
-        }
-    }
+  }
+
+  input {
+    background: transparent;
+  }
 
 }
 
 .md-select-custom-disabled-text[disabled] {
-    .md-select-label {
-        cursor: not-allowed;
-        color: rgba(0,0,0,0.9) !important;
-        border-bottom: 0;
-    }
+  .md-select-label {
+    cursor: not-allowed;
+    color: rgba(0,0,0,0.9) !important;
+    border-bottom: 0;
+    font-size: 12px;
+  }
 
-    .md-select-icon {
-        color: rgba(0,0,0,0.26) !important;
-    }
+  .md-select-icon {
+    color: rgba(0,0,0,0.26) !important;
+  }
 }
 
 .cell-span {
-    border: 1px solid transparent;
+  border: 1px solid transparent;
 }
 
 .user-editing-buttons {
-    max-width: 150px;
-    min-width: 150px;
-    float: right;
+  max-width: 150px;
+  min-width: 150px;
+  float: right;
 }
 
 .deactivated-user {
-    background: #FFF3E0;
-    text-decoration: line-through;
+  background: #FFF3E0;
+  text-decoration: line-through;
 
-    &:hover {
-        background: #FFE0B2;
-    }
+  &:hover {
+    background: #FFE0B2;
+  }
 }
 
 .activated-user {
@@ -71,29 +63,29 @@
 }
 
 .user-row-button {
-    float: right;
-    width: 35px;
-    height: 49px;
-    color: #9E9E9E;
-    border-radius: 25px;
-    background: transparent;
-    border: transparent;
-    font-size: 18px;
+  float: right;
+  width: 35px;
+  height: 49px;
+  color: #9E9E9E;
+  border-radius: 25px;
+  background: transparent;
+  border: transparent;
+  font-size: 18px;
 
-    &:hover {
-        color: #212121;
-    }
+  &:hover {
+    color: #212121;
+  }
 }
 
 .user-admin-input[disabled] {
-    border: 0;
+  border: 0;
 }
 
 .user-admin-input {
-    height: 29px;
-    margin-right: 4px;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 1px solid #d3d3d3;
+  height: 29px;
+  margin-right: 4px;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid #d3d3d3;
 }
