added tasklog button in schedule details view

--- a/app/app.less
+++ b/app/app.less
@@ -551,3 +551,9 @@ md-toast {
     opacity: 1;
     max-height: 40px;
 }
+
+.md-select-label {
+    span:not(.md-select-icon) {
+        flex: 1;
+    }
+}
