--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -49,7 +49,7 @@
     position: relative;
     padding: 0;
     overflow: auto !important;
-//    background: white;
+    //    background: white;
 
     input {
         width: 100%;
@@ -94,7 +94,6 @@
         }
     }
 }
-
 
 @item-bg: #FFF;
 @item-border-bottom: #d3d3d3;
@@ -267,10 +266,10 @@
 .highlight-script-window-with-box-shadow {
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
-//    z-index: 0;
-//    border-right: 1px solid #d3d3d3 !important;
-//    border-bottom: 1px solid #d3d3d3 !important;
-//    border-top: 1px solid #d3d3d3 !important;
+    //    z-index: 0;
+    //    border-right: 1px solid #d3d3d3 !important;
+    //    border-bottom: 1px solid #d3d3d3 !important;
+    //    border-top: 1px solid #d3d3d3 !important;
 }
 
 .schedule-block-script-window {
@@ -407,12 +406,12 @@
 .refresh-schedule-block-lists-button {
     bottom: 0;
     padding: 10px;
-//    pointer-events: none;
+    //    pointer-events: none;
     position: fixed;
     right: 0;
     white-space: nowrap;
     z-index: 21;
-//    will-change: top,left;
+    //    will-change: top,left;
 }
 
 .sb-row-button {
@@ -459,7 +458,7 @@
 }
 
 .subarray_in_maintenance_bg {
-    background-color: rgb(94,53,177);
+    background-color: rgb(94, 53, 177);
     color: white;
 }
 
@@ -486,4 +485,15 @@
 .scheduler-inline-button {
     width: 35px;
     height: 49px;
+}
+
+.scheduler-menu-item-button {
+    width: 170px;
+    font-size: 14px;
+    height: 38px;
+    padding: 2px;
+    text-align: start;
+    span {
+        margin-left: 6px;
+    }
 }
