now displaying a circular indeterminate progress bar on a sb when the sb is being verified, changed the sb details alert box to a proper mddialog box

--- a/app/app.less
+++ b/app/app.less
@@ -557,3 +557,10 @@ md-toast {
         flex: 1;
     }
 }
+
+.smaller-progress-circular {
+    top: -2px;
+    right: 3px;
+    position: absolute;
+    transform: scale(0.7,0.7) !important;
+}
