--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -116,6 +116,7 @@
 }
 
 .schedule-draft-item {
+    position: relative;
     height: 48px;
     max-height: 48px;
     padding: 4px;
@@ -483,6 +484,7 @@
 }
 
 .scheduler-inline-button {
+    transition: 0s;
     width: 35px;
     height: 49px;
 }
