--- a/app/app.less
+++ b/app/app.less
@@ -52,25 +52,22 @@
     top: 0px;
     left: 50%;
     width: 46px;
-    height: 25px;
+    height: 32px;
     margin-left: auto;
     margin-right: auto;
-    color: white;
+    color: rgba(255,255,255,0.5);
     cursor: pointer;
     border: 0;
     background: none;
     z-index: 1000;
-    color: #FAFAFA;
-
-    i {
-        font-size: 16px;
-    }
+    font-size: 16px;
+    text-align: center;
 
     &:hover {
-        color: @navbar-text-hover-color;
-        i {
-            font-size: 24px;
-        }
+        color: rgba(227,227,227,0.8);
+        background-color: rgba(255,255,255,0.2);
+        font-size: 24px;
+        margin-top: -5px;
     }
 
     &:focus {
@@ -80,10 +77,6 @@
 
 .toolbar-collapse-button-grey {
     color: transparent;
-
-    &:hover {
-        color: #E0E0E0;
-    }
 }
 
 .button-toolbar-flat-icon {
@@ -109,14 +102,10 @@
 
 .toolbar-time-span {
     color: white;
-
-    &:hover {
-        color: lightgrey;
-    }
 }
 
 body {
-//    font-family: RobotoDraft;
+    //    font-family: RobotoDraft;
     min-width: @app-min-width;
     padding: 0 !important;
     overflow: hidden;
@@ -146,7 +135,7 @@ body {
 }
 
 .side-nav-title {
-    padding-top:10px;
+    padding-top: 10px;
     padding-left: 25px;
     font-size: 1.5em;
 }
@@ -167,7 +156,6 @@ body {
         font-size: 13px;
         font-weight: bold;
     }
-
 
     span {
         width: 27px;
@@ -329,9 +317,9 @@ md-sidenav {
 }
 
 .alarms-warning-container {
-//    button {
-//        margin-top: 8px;
-//    }
+    //    button {
+    //        margin-top: 8px;
+    //    }
 }
 
 .dashboard-container h1 {
@@ -353,15 +341,15 @@ md-sidenav {
     position: absolute;
     min-height: 100%;
     min-width: 100%;
-    background-color: rgba(236,239,241,0.4);
+    background-color: rgba(236, 239, 241, 0.4);
     z-index: 100;
     cursor: wait;
     border: none;
 
     md-progress-circular {
-        background-color: rgba(236,239,241,0.2);
+        background-color: rgba(236, 239, 241, 0.2);
         .md-inset {
-            background-color: rgba(236,239,241,0.2);
+            background-color: rgba(236, 239, 241, 0.2);
         }
     }
 }
@@ -372,7 +360,7 @@ md-toast {
 
 .list-subheader-title {
     border-bottom: 1px solid #9E9E9E;
-//    border-bottom: 1px solid #9E9E9E;
+    //    border-bottom: 1px solid #9E9E9E;
     min-height: 30px;
     max-height: 30px;
     width: 100%;
@@ -382,35 +370,34 @@ md-toast {
 }
 
 .animate-show-grow {
-//    min-width: 100%;
-//    min-height: 100%;
-//    left: 50%;
-//    top: 30px;
-//    border: none;
+    //    min-width: 100%;
+    //    min-height: 100%;
+    //    left: 50%;
+    //    top: 30px;
+    //    border: none;
 
-//    md-progress-circular {
-//        width: 100%;
-//        height: 100%;
-//    }
+    //    md-progress-circular {
+    //        width: 100%;
+    //        height: 100%;
+    //    }
 }
 
 .animate-show-grow.ng-hide-add.ng-hide-add-active,
 .animate-show-grow.ng-hide-remove.ng-hide-remove-active {
-//    -webkit-transition: all ease-in 0.2s;
+    //    -webkit-transition: all ease-in 0.2s;
     transition: all ease-in 0.2s;
 }
 
 .animate-show-grow.ng-hide {
-//    min-width: 38px;
-//    min-height: 38px;
-//    left: 50%;
-//    top: 0px;
+    //    min-width: 38px;
+    //    min-height: 38px;
+    //    left: 50%;
+    //    top: 0px;
 
-
-//    md-progress-circular {
-//        width: 0%;
-//        height: 0%;
-//    }
+    //    md-progress-circular {
+    //        width: 0%;
+    //        height: 0%;
+    //    }
 }
 
 .dropdown-list-item {
@@ -585,5 +572,5 @@ md-toast {
     top: -2px;
     right: 3px;
     position: absolute;
-    transform: scale(0.7,0.7) !important;
+    transform: scale(0.7, 0.7) !important;
 }
