--- a/app/app.less
+++ b/app/app.less
@@ -359,14 +359,12 @@ md-toast {
 }
 
 .list-subheader-title {
-    border-bottom: 1px solid #9E9E9E;
-    //    border-bottom: 1px solid #9E9E9E;
     min-height: 30px;
     max-height: 30px;
     width: 100%;
-    padding: 8px;
+    padding: 2px;
     cursor: pointer;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 
 .animate-show-grow {
@@ -457,9 +455,9 @@ md-toast {
     align-items: center;
     flex-direction: row;
     width: 100%;
-    height: 44px;
-    min-height: 44px;
-    max-height: 44px;
+    height: 25px;
+    min-height: 25px;
+    max-height: 25px;
     font-size: inherit;
     font-weight: normal;
     padding: 0 10px;
