--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -45,6 +45,7 @@
 }
 
 .schedule-draft-data-list {
+    direction: rtl;
     z-index: 0;
     position: relative;
     padding: 0;
@@ -420,7 +421,7 @@
     width: 49px;
     height: 49px;
     color: #9E9E9E;
-    border-radius: 25px;
+//    border-radius: 25px;
     background: transparent;
     border: transparent;
     font-size: 18px;
@@ -428,6 +429,12 @@
 
     &:hover {
         color: #212121;
+        background: #e4e4e4;
+    }
+
+    &:active {
+        color: #212121;
+        background: #dbdbdb;
     }
 }
 
