various styling fixes, top health view now resizes with window, fixed error alarm not displaying properly, prevent tooltip on health charts to go off screen, added schedule observations shortcut buttons on the scheduler home display

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -66,8 +66,8 @@
     opacity: 1.0;
     min-width: 280px;
     max-width: 280px;
-    min-height: 108px;
-    max-height: 108px;
+    min-height: 68px;
+    max-height: 68px;
     margin-left:20px;
 
     .datestamp {
@@ -104,6 +104,10 @@
 
 .alarm-info {
     .alarm-styles(@alarm-info-bg, white);
+}
+
+.alarm-error {
+    .alarm-styles(@alarm-error-bg, white);
 }
 
 .alarm-nominal {
