--- a/app/app.less
+++ b/app/app.less
@@ -280,7 +280,7 @@ md-sidenav {
     transition: all 0.25s ease-out;
     max-height: 56px;
     min-height: 56px;
-    margin-bottom: 16px;
+    margin-bottom: 4px;
     opacity: 1;
     overflow: visible;
 }
@@ -481,7 +481,7 @@ md-toast {
 }
 
 .maintenance-text {
-    color: #5e35b1;
+    color: #AB47BC;
 }
 
 .animate-repeat {
