--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -45,7 +45,7 @@
 }
 
 .schedule-draft-data-list {
-    direction: rtl;
+//    direction: rtl;
     z-index: 0;
     position: relative;
     padding: 0;
@@ -58,9 +58,9 @@
 }
 
 .schedule-block-id-text {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
-    margin-top: -2px;
+    margin-top: -6px;
     max-width: 130px;
     min-width: 130px;
     width: 130px;
@@ -68,10 +68,8 @@
 }
 
 .schedule-block-name-div {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 160px;
-    min-width: 160px;
+    max-width: 120px;
+    min-width: 120px;
     margin-left: 4px;
     cursor: pointer;
 
@@ -82,7 +80,7 @@
         font-size: 12px;
         max-width: 100px;
         overflow: hidden;
-        margin-top: 18px;
+        margin-top: 8px;
         margin-left: 5px;
     }
 
@@ -94,6 +92,13 @@
             overflow: visible;
         }
     }
+}
+
+.inline-sb-button {
+    font-size: 14px;
+    height: 32px;
+    width: 26px;
+    transition: 0s;
 }
 
 @item-bg: #FFF;
@@ -119,10 +124,12 @@
 
 .schedule-draft-item {
     position: relative;
-    height: 48px;
-    max-height: 48px;
-    padding: 4px;
-    min-width: 800px;
+    height: 38px;
+    max-height: 38px;
+//    padding: 4px;
+    font-size: 12px;
+//    min-width: 800px;
+    white-space: nowrap;
     direction: ltr;
     border-bottom: 1px solid #d3d3d3;
     overflow: hidden;
@@ -458,7 +465,7 @@
 }
 
 .subarray-container {
-    min-width: 1000px;
+//    min-width: 1000px;
     margin-bottom: 8px;
     min-height: 200px;
 }
