--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -458,7 +458,8 @@
 }
 
 .md-subarray-fab-button {
-    width: 32px;
+    min-width: 38px;
+    max-width: 38px;
     height: 32px;
     font-size: 14px;
     margin-right: 4px;
@@ -473,12 +474,20 @@
 .subarray-state-toolbar {
     max-height: 34px;
     min-height: 34px;
-    margin-left: 32px;
-    margin-right: 32px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 400px;
+    min-width: 200px;
+    text-transform: uppercase;
+    font-weight: 500;
     box-shadow: none;
     font-size: 16px;
     cursor: pointer;
     border-radius: 3px;
+}
+
+.transparent-background {
+    background: transparent !important;
 }
 
 .inline-svg-icon {
