added colour coding to schedule block rows, set legend to be hidden by default

--- a/app/app.less
+++ b/app/app.less
@@ -572,3 +572,15 @@ md-toast {
     position: absolute;
     transform: scale(0.7, 0.7) !important;
 }
+
+.blue-color {
+    color: #3F51B5;
+}
+
+.purple-color {
+    color: #8E24AA;
+}
+
+.green-color {
+    color: #9E9D24;
+}
