fixed alarms notification stealing pointer events, maintenance subarrays now has a purple background, added a schedule block verify button to Scheduler.Observations, renamed schedule block text color classes, fixed dropdown menu offsets

--- a/app/app.less
+++ b/app/app.less
@@ -573,14 +573,18 @@ md-toast {
     transform: scale(0.7, 0.7) !important;
 }
 
-.blue-color {
+.manual-color {
     color: #3F51B5;
 }
 
-.purple-color {
+.maintenance-color {
     color: #8E24AA;
 }
 
-.green-color {
+.observation-color {
     color: #9E9D24;
+}
+
+.green-color {
+    color: #4CAF50;
 }
