--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -102,7 +102,7 @@
 }
 
 @item-bg: #FFF;
-@item-border-bottom: #d3d3d3;
+@item-border-bottom: #9E9E9E;
 
 .selected-resource-item {
     background: #B3E5FC !important;
@@ -131,7 +131,7 @@
 //    min-width: 800px;
     white-space: nowrap;
     direction: ltr;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid #9E9E9E;
     overflow: hidden;
     &:hover {
         background-color: darken(@item-bg, 5%);
@@ -142,14 +142,14 @@
     height: 32px;
     padding: 2px;
     direction: ltr;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid #9E9E9E;
     overflow: hidden;
 }
 
 .schedule-item {
     height: 48px;
     max-height: 48px;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid #9E9E9E;
 }
 
 .schedule-item-description-input {
@@ -546,4 +546,8 @@
     span {
         margin-left: 6px;
     }
+}
+
+.maintenance-bg {
+    background-color: rgba(206, 147, 216, 0.5);
 }
