--- a/app/app.less
+++ b/app/app.less
@@ -37,7 +37,22 @@
 @navbar-text-hover-color: lightgrey;
 
 @app-min-width: 770px;
+@ttf: format('truetype');
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto/Roboto-Regular.ttf') @ttf;
+}
+.rb {font-family: 'Roboto';}
+@font-face {
+    font-family: 'Roboto Black';
+    src: url('../fonts/Roboto/Roboto-Black.ttf') @ttf;
+}
+.rbB {font-family: 'Roboto Black';}
+@font-face {
+    font-family: 'Roboto Light';
+    src: url('../fonts/Roboto/Roboto-Light.ttf') @ttf;
+}
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a {
     cursor: pointer;
@@ -105,7 +120,7 @@
 }
 
 body {
-    //    font-family: RobotoDraft;
+    font-family: Roboto;
     min-width: @app-min-width;
     padding: 0 !important;
     overflow: hidden;
