--- a/app/health/health.less
+++ b/app/health/health.less
@@ -140,13 +140,17 @@
 .legend-popup {
     border-radius: 1px;
     position: fixed;
-    right: 0px;
-    bottom: 0px;
+    right: 10px;
+    bottom: 10px;
     background: white;
     color: black;
     padding: 0px;
     span {
         margin-top: 4px;
+    }
+
+    button {
+        width: 36px;
     }
 }
 
