--- a/app/app.less
+++ b/app/app.less
@@ -181,9 +181,9 @@ body {
     &:hover {
         background-color: #F5F5F5;
 
-        span {
-            font-size: 32px;
-        }
+//        span {
+//            font-size: 32px;
+//        }
 
         button {
             background-color: #F5F5F5;
@@ -602,4 +602,20 @@ md-toast {
 
 .green-color {
     color: #4CAF50;
+}
+
+.mainbar-navbar-button {
+    padding: 0;
+    font-size: 30px;
+    height: 56px;
+    margin: 4px !important;
+
+    md-icon {
+        margin-top: -10px;
+        margin-left: -4px;
+    }
+}
+
+*:focus {
+    outline: 0;
 }
