--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -60,7 +60,7 @@
 .schedule-block-id-text {
     font-size: 14px;
     font-weight: bold;
-    margin-top: -6px;
+    margin-top: -8px;
     max-width: 130px;
     min-width: 130px;
     width: 130px;
@@ -75,13 +75,12 @@
 
     i {
         position: absolute;
-        left: 0;
+        left: 5px;
         padding: 2px;
         font-size: 12px;
         max-width: 100px;
         overflow: hidden;
-        margin-top: 8px;
-        margin-left: 5px;
+        top: 22px;
     }
 
     &:hover {
