--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -1,40 +1,44 @@
-path {
-  stroke: steelblue;
-  stroke-width: 2;
-  fill: none;
+.grid .tick {
+    stroke: #9e9e9e;
+    opacity: 0.7;
+    shape-rendering: crispEdges;
+}
+
+.grid path {
+    stroke-width: 0;
+}
+
+.axis path {
+    fill: none;
+    stroke: #9e9e9e;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    fill: #9e9e9e;
 }
 
 .axis line {
-  fill: none;
-  stroke: lightgrey;
-  stroke-width: 1;
-  shape-rendering: crispEdges;
-}
-
-.axis {
-  > .domain {
-    fill: none;
-    stroke: black;
-    stroke-width: 0;
+    stroke: #9e9e9e;
     shape-rendering: crispEdges;
-  }
 }
 
-.gridrect {
-  stroke: black;
-  fill: none;
-  stroke-width: 1;
+.axis .axis-label {
+    font-size: 14px;
 }
 
-div.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 60px;
-  height: 28px;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
+.line {
+    fill: none;
+    stroke-width: 1.5px;
+}
+
+.dot {
+    /* consider the stroke-with the mouse detect radius? */
+    stroke: transparent;
+    stroke-width: 10px;
+    cursor: pointer;
+}
+
+.dot:hover {
+    stroke: rgba(68, 127, 255, 0.3);
 }
