--- a/app/widgets/gantt/gantt-widget.less
+++ b/app/widgets/gantt/gantt-widget.less
@@ -3,11 +3,11 @@
     font-size: 12px;
 }
 
-.axis path,.axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-}
+//.axis path,.axis line {
+//    fill: none;
+//    stroke: #000;
+//    shape-rendering: crispEdges;
+//}
 
 .bar {
     fill: #33b5e5;
