more sensor graph work, removed aria-labels and supressing warning messages

--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -42,3 +42,31 @@
 .dot:hover {
     stroke: rgba(68, 127, 255, 0.3);
 }
+
+.floating-chart-actions {
+    position: absolute;
+    top: 80px;
+    right: 16px;
+
+    .md-button {
+        width: 36px;
+        height: 36px;
+        margin: 2px;
+        line-height: 4.5rem;
+//        padding: 0px !important;
+    }
+}
+
+.sensor-graph-legend {
+    font-size: 16px;
+    font-weight: bold;
+    text-anchor: middle;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.chips-flex {
+    max-height: 52px;
+    min-height: 52px;
+    overflow: auto;
+}
