--- a/app/app.less
+++ b/app/app.less
@@ -491,6 +491,22 @@ md-toast {
     font-weight: normal;
     padding: 0 10px;
     margin: 0;
+
+    md-input-container {
+        padding-bottom: 0;
+        .md-input {
+            text-shadow: 0px 0px;
+            -webkit-font-smoothing: antialiased;
+        }
+
+    }
+
+    md-select {
+        margin: 0;
+        md-select-label {
+            margin: 4px;
+        }
+    }
 }
 
 .search-input-box {
@@ -503,6 +519,10 @@ md-toast {
     border-top: 0;
     border-left: 0;
     border-right: 0;
+}
+
+.input-error {
+    border-bottom: 2px solid #F44336 !important;
 }
 
 .error-text {
