--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -88,7 +88,7 @@ circle.child {
 
 }
 
-path:not(.line) {
+path:not(.line.domain) {
     stroke: #fff;
     stroke-width: 1.5;
     cursor: pointer;
