--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -14,12 +14,16 @@
     shape-rendering: crispEdges;
 }
 
+.domain path {
+    stroke: #333;
+}
+
 .axis text {
     fill: #9e9e9e;
 }
 
 .axis line {
-    stroke: #9e9e9e;
+    stroke: rgba(158, 158, 158, 0.5);
     shape-rendering: crispEdges;
 }
 
@@ -53,7 +57,7 @@
         height: 36px;
         margin: 2px;
         line-height: 4.5rem;
-//        padding: 0px !important;
+        //        padding: 0px !important;
     }
 }
 
@@ -65,8 +69,68 @@
     cursor: pointer;
 }
 
-.chips-flex {
+.sensor-search-name-list {
+    md-list-item {
+        cursor: pointer;
+        padding: 0;
+        &:focus {
+            outline: auto;
+        }
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    margin-left: 8px;
+    margin-right: 8px;
+    min-width: 350px;
+    max-width: 350px;
+    min-height: 700px;
+    max-height: 700px;
+    font-size: 12px;
+    overflow: auto;
+//    border: 1px solid rgba(158, 158, 158, 0.5);
+}
+
+.sensor-search-input {
+    width: 334px;
+//    margin-left: 8px;
+    padding-bottom: 8px;
+}
+
+.custom-chips {
     max-height: 52px;
     min-height: 52px;
     overflow: auto;
 }
+
+.custom-chips .md-chip {
+    position: relative;
+    padding-right: 3.5rem; }
+.custom-chips .md-chip .md-chip-remove-container {
+    position: absolute;
+    right: 0.4rem;
+    top: 0.4rem;
+    margin-right: 0;
+    height: 2.4rem; }
+.custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip {
+    position: relative;
+    height: 2.4rem;
+    width: 2.4rem;
+    line-height: 3rem;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    border: none;
+    box-shadow: none;
+    padding: 0;
+    margin: 0;
+    transition: background 0.15s linear;
+    display: block; }
+.custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip md-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0) scale(0.7);
+    color: white;
+    fill: white; }
+.custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip:hover, .chipsdemoBasicUsage .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
+    background: rgba(255, 0, 0, 0.8); }
