--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -100,3 +100,9 @@ actions-button {
     border: 0;
 
 }
+
+.brush .extent {
+    stroke: #fff;
+    fill-opacity: .125;
+    shape-rendering: crispEdges;
+}
