--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -143,6 +143,9 @@
     color: #000;
     text-shadow: 0 1px 0 #fff;
     opacity: .4;
+    text-transform: uppercase;
+    background: transparent;
+    border: 0;
 
     &:hover, &focus {
         color: #000;
