--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -133,7 +133,7 @@
     border-bottom: 1px solid #9E9E9E;
     overflow: hidden;
     &:hover {
-        background-color: darken(@item-bg, 5%);
+        background-color: rgba(158,158,158,0.1)
     }
 }
 
@@ -265,25 +265,28 @@
 }
 
 .highlight-script-window-background {
-    background-color: #B3E5FC !important;
+//    background-color: #B3E5FC !important;
 }
 
 .highlight-script-window {
-    background-color: #B3E5FC !important;
+    textarea {
+        background: transparent;
+    }
 }
 
 .highlight-script-window-with-box-shadow {
-    background-color: #B3E5FC !important;
+    border: 16px solid #B3E5FC;
     box-shadow: 0px 2px 40px 0 #000;
-    //    z-index: 0;
-    //    border-right: 1px solid #d3d3d3 !important;
-    //    border-bottom: 1px solid #d3d3d3 !important;
-    //    border-top: 1px solid #d3d3d3 !important;
+}
+
+.script-window-without-box-shadow {
+    border: 16px solid transparent;
+    box-shadow: none;
 }
 
 .schedule-block-script-window {
     padding: 0px;
-    background-color: #ECEFF1;
+//    background-color: #ECEFF1;
     height: 600px;
     overflow: auto;
 
@@ -302,7 +305,7 @@
 .schedule-block-resource-window {
     height: 400px;
     padding: 0px;
-    background-color: white;
+//    background-color: white;
 }
 
 .schedule-block-list {
@@ -431,12 +434,12 @@
 
     &:hover {
         color: #212121;
-        background: #e4e4e4;
+//        background: #e4e4e4;
     }
 
     &:active {
         color: #212121;
-        background: #dbdbdb;
+//        background: #dbdbdb;
     }
 }
 
@@ -444,6 +447,7 @@
     background: #B3E5FC !important;
     box-shadow: 1px 2px 10px 0 #393939;
     border-bottom: 1px solid transparent;
+    color: black;
 }
 
 .subarray-item {
