--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -51,6 +51,11 @@
     position: absolute;
     top: 80px;
     right: 16px;
+    opacity: 0.2;
+
+    &:hover {
+        opacity: 1.0;
+    }
 
     .md-button {
         width: 36px;
@@ -87,12 +92,12 @@
     max-height: 700px;
     font-size: 12px;
     overflow: auto;
-//    border: 1px solid rgba(158, 158, 158, 0.5);
+    //    border: 1px solid rgba(158, 158, 158, 0.5);
 }
 
 .sensor-search-input {
     width: 334px;
-//    margin-left: 8px;
+    //    margin-left: 8px;
     padding-bottom: 8px;
 }
 
@@ -104,13 +109,17 @@
 
 .custom-chips .md-chip {
     position: relative;
-    padding-right: 3.5rem; }
+    padding-right: 3.5rem;
+}
+
 .custom-chips .md-chip .md-chip-remove-container {
     position: absolute;
     right: 0.4rem;
     top: 0.4rem;
     margin-right: 0;
-    height: 2.4rem; }
+    height: 2.4rem;
+}
+
 .custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip {
     position: relative;
     height: 2.4rem;
@@ -124,13 +133,122 @@
     padding: 0;
     margin: 0;
     transition: background 0.15s linear;
-    display: block; }
+    display: block;
+}
+
 .custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip md-icon {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0) scale(0.7);
     color: white;
-    fill: white; }
+    fill: white;
+}
+
 .custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip:hover, .chipsdemoBasicUsage .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
-    background: rgba(255, 0, 0, 0.8); }
+    background: rgba(255, 0, 0, 0.8);
+}
+
+.sensor-graph-tips {
+    position: absolute;
+    left: 400px;
+    top: 80px;
+
+    .arrow-box {
+        position: relative;
+        background: #88b7d5;
+        border: 4px solid #c2e1f5;
+        z-index: 100;
+        color: black;
+        span {
+            margin: 10px;
+            font-size: 36px;
+        }
+    }
+    .arrow-box:after, .arrow-box:before {
+        right: 100%;
+        top: 50%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+    }
+
+    .arrow-box:after {
+        border-color: rgba(136, 183, 213, 0);
+        border-right-color: #88b7d5;
+        border-width: 20px;
+        margin-top: -20px;
+    }
+    .arrow-box:before {
+        border-color: rgba(194, 225, 245, 0);
+        border-right-color: #c2e1f5;
+        border-width: 26px;
+        margin-top: -26px;
+    }
+
+    .sg-timerange-tip {
+        width: 360px;
+    }
+
+    .sg-findsensor-tip {
+        margin-top: 60px;
+    }
+
+    .sg-sensordata-tip {
+        margin-top: 10px;
+    }
+
+    .sg-options-tip {
+        margin-top: 710px;
+    }
+}
+
+.spinner {
+    width: 80px;
+    height: 80px;
+
+    position: relative;
+    margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(158, 158, 158, 0.8);
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    -webkit-animation: bounce 2.0s infinite ease-in-out;
+    animation: bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+@-webkit-keyframes bounce {
+    0%, 100% {
+        -webkit-transform: scale(0.0)
+    }
+    50% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    }
+    50% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
+}
