--- a/app/app.less
+++ b/app/app.less
@@ -164,17 +164,21 @@ body {
     font-size: 1.5em;
 }
 
+md-sidenav {
+    background-color: inherit;;
+}
+
 .menu-item {
     font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     cursor: pointer;
-    color: #757575;
+//    color: #757575;
     height: 48px;
     width: 100%;
     padding-left: 24px;
 
     button {
         margin-left: 24px;
-        background-color: #fff;
+        background-color: transparent;
         border-width: 0;
         display: block;
         font-size: 13px;
@@ -188,22 +192,22 @@ body {
     }
 
     &:hover {
-        background-color: #F5F5F5;
+        background-color: rgba(255,255,255, 0.1);
 
-//        span {
+        span {
 //            font-size: 32px;
-//        }
+        }
 
         button {
-            background-color: #F5F5F5;
+//            background-color: #F5F5F5;
         }
     }
 
     &:active {
-        background-color: #E0E0E0;
+//        background-color: #E0E0E0;
 
         button {
-            background-color: #E0E0E0;
+//            background-color: #E0E0E0;
         }
     }
 }
