--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -46,6 +46,7 @@ rect.parent,
 }
 
 .treemap-tooltip {
+    color: #333333;
     word-wrap: break-word;
     max-width: 290px;
     max-height: 225px;
@@ -64,7 +65,7 @@ text.parent {
 }
 
 circle {
-    stroke: #fff;
+//    stroke: #fff;
     pointer-events: all;
 }
 
