--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -32,7 +32,7 @@
 }
 
 .line {
-    fill: none;
+    fill: none !important;
     stroke-width: 1.5px;
 }
 
@@ -43,8 +43,33 @@
     cursor: pointer;
 }
 
+.dot-hide {
+    circle {
+        display: none;
+    }
+}
+
 .dot:hover {
     stroke: rgba(68, 127, 255, 0.3);
+}
+
+.multi-line-tooltip {
+    background: rgba(255,255,255, 0.8);
+    color: #333333;
+    border: 0 solid #333333;
+    font-size: 14px;
+    pointer-events: none;
+    position: absolute;
+    padding: 8px;
+    max-width: 220px;
+    max-height: 220px;
+    word-wrap: break-word;
+}
+
+multi-line-chart {
+    circle {
+        stroke-width: 0;
+    }
 }
 
 .floating-chart-actions {
@@ -75,9 +100,10 @@
 }
 
 .sensor-search-name-list {
-    md-list-item {
+    .sensor-search-result-item {
         cursor: pointer;
-        padding: 0;
+        margin: 2px 4px 2px 8px;
+
         &:focus {
             outline: auto;
         }
@@ -86,13 +112,26 @@
     }
     margin-left: 8px;
     margin-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     min-width: 350px;
     max-width: 350px;
     min-height: 700px;
     max-height: 700px;
     font-size: 12px;
     overflow: auto;
+    position: relative;
     //    border: 1px solid rgba(158, 158, 158, 0.5);
+}
+
+//todo, better overlay without using fixed
+.search-loading-overlay {
+    background: rgba(158,158,158,0.1);
+    position: fixed;
+    left: 16px;
+    top: 287px;
+    height: 700px;
+    width: 350px;
 }
 
 .sensor-search-input {
@@ -105,6 +144,10 @@
     max-height: 52px;
     min-height: 52px;
     overflow: auto;
+//    .md-chip {
+//        background: rgba(158,158,158, 0.5) !important;
+//    }
+
 }
 
 .custom-chips .md-chip {
@@ -118,6 +161,7 @@
     top: 0.4rem;
     margin-right: 0;
     height: 2.4rem;
+    background: none;
 }
 
 .custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip {
@@ -126,13 +170,13 @@
     width: 2.4rem;
     line-height: 3rem;
     text-align: center;
-    background: rgba(0, 0, 0, 0.3);
+//    background: rgba(158,158,158, 0.5) !important;
     border-radius: 50%;
     border: none;
     box-shadow: none;
     padding: 0;
     margin: 0;
-    transition: background 0.15s linear;
+//    transition: background 0.15s linear;
     display: block;
 }
 
@@ -140,19 +184,20 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0) scale(0.7);
+    transform: translate3d(-49%, -34%, 0);
+    font-size: 18px;
     color: white;
     fill: white;
 }
 
 .custom-chips .md-chip .md-chip-remove-container button.sensor-name-chip:hover, .chipsdemoBasicUsage .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
-    background: rgba(255, 0, 0, 0.8);
+    background: rgba(244, 67, 54, 1);
 }
 
 .sensor-graph-tips {
     position: absolute;
     left: 400px;
-    top: 80px;
+    top: 60px;
 
     .arrow-box {
         position: relative;
@@ -161,8 +206,7 @@
         z-index: 100;
         color: black;
         span {
-            margin: 10px;
-            font-size: 36px;
+            font-size: 24px;
         }
     }
     .arrow-box:after, .arrow-box:before {
@@ -190,19 +234,26 @@
     }
 
     .sg-timerange-tip {
-        width: 360px;
+        width: 230px;
+        height: 54px;
     }
 
     .sg-findsensor-tip {
-        margin-top: 60px;
+        margin-top: 10px;
+        height: 54px;
+        width: 790px;
     }
 
     .sg-sensordata-tip {
         margin-top: 10px;
+        width: 380px;
+        height: 54px;
     }
 
     .sg-options-tip {
-        margin-top: 710px;
+        margin-top: 660px;
+        width: 380px;
+        height: 54px;
     }
 }
 
